--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Bundle Install
         run: bundle install
       - name: Lint Podspec
-        run: bundle exec pod lib lint --verbose --fail-fast
+        run: bundle exec pod lib lint --verbose --fail-fast --allow-warnings
   build:
     name: Build
     runs-on: macOS-latest
