--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,25 +9,25 @@ on:
 jobs:
   pod-lint:
     name: Pod Lint
-    runs-on: macOS-14
+    runs-on: macOS-15
     steps:
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3.4'
+          ruby-version: '3.3.5'
       - name: Checkout Repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       - name: Bundle Install
         run: bundle install
       - name: Lint Podspec
-        run: bundle exec pod lib lint --verbose --fail-fast
+        run: bundle exec pod lib lint --verbose --fail-fast --allow-warnings
   build:
     name: Build
     runs-on: macOS-latest
     steps:
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3.4'
+          ruby-version: '3.3.5'
       - name: Checkout Repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       - name: Build
         run: xcrun xcodebuild -project XCTest.xcodeproj -scheme XCTest
